@@ -1,4 +1,7 @@
 4.6.3:
+  * Be sure all DBEnv paths in the TestSuite are generated in a
+    way compatible with launching the tests in multiple
+    threads/processes.
   * Move all the "assert" in the TestSuite to the version in the
     framework. This is very convenient, for example, to generate the
     final report, or better automation.
